--- a/index.html
+++ b/index.html
@@ -187,6 +187,17 @@
         margin: 10px;
         border-radius: 100px;
       }
+      .img-thumbnail img{
+        animation: an4 0.4s;
+      }
+      @keyframes an4{
+        0%{
+          opacity: 0;
+        }
+        100%{
+          opacity: 1;
+        }
+      }
     </style>
   </head>
   <body>
