--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
         border-radius: 100px;
       }
       .img-thumbnail img{
-        animation: an4 0.4s;
+        animation: an4 1s;
+        transition: 0.2s;
+          opacity: 0;
       }
       @keyframes an4{
         0%{
