--- a/index.html
+++ b/index.html
@@ -200,12 +200,28 @@
           opacity: 1;
         }
       }
+      .barMobile{
+        position: fixed;
+        left:0;
+        top:0;
+        height: 48px;
+        background: #000;
+        z-index: 100;
+        display:block;
+        width:100%;
+        right: 0;
+      }
+      .content-page{ 
+        margin-top:48px;
+      }
     </style>
   </head>
   <body>
     <div id="root">
       <div class="--thema-dark">
-        <nav ></nav>
+        <nav class="barMobile">
+          <a href="/"
+        </nav>
         <main class="content-page" role=meta>
           <div class="video-content-viwer">
             <div class="content_video-E-info">
@@ -560,7 +576,6 @@
         
       }
       })(window);
-      
     </script>
   </body>
-</html>https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=500&playlistId=PL-CszeBzoG-HPQTxJYcYT9P-Y5lyfQmOI&key=AIzaSyBZfKEL5-VEbk261Vq6eYAEUwQ1kSZDefM&positi
+</html>
