--- a/index.html
+++ b/index.html
@@ -220,7 +220,11 @@
     <div id="root">
       <div class="--thema-dark">
         <nav class="barMobile">
-          <a href="/"
+          <a href="/">
+            <div class="--ys">
+              <img src="assets/apple-touch-icon.png" >
+            </div>
+          </a>
         </nav>
         <main class="content-page" role=meta>
           <div class="video-content-viwer">
