--- a/CG/index.html
+++ b/CG/index.html
@@ -1,1 +1,14 @@
-...
+<html>
+  <head >
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CG</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://static.twitchcdn.net/assets/favicon-16-52e571ffea063af7a7f4.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://static.twitchcdn.net/assets/favicon-32-e29e246c157142c94346.png">
+    <link rel="alternate" media="only screen and(max-width: 640px)" href="http://m.localhost:8160/"/>
+    <link rel="canonical" href="http://localhost:8160/" />
+  </head>
+  <body >
+    
+  </body>
+</html>
