--- a/CG/index.html
+++ b/CG/index.html
@@ -7,8 +7,70 @@
     <link rel="icon" type="image/png" sizes="32x32" href="https://static.twitchcdn.net/assets/favicon-32-e29e246c157142c94346.png">
     <link rel="alternate" media="only screen and(max-width: 640px)" href="http://m.localhost:8160/"/>
     <link rel="canonical" href="http://localhost:8160/" />
+    <style >
+      
+    </style>
   </head>
-  <body >
-    
+  <body>
+    <div id="root">
+      <div class="JhGtE">
+        <div class="menu">
+          <ytm-feed-filter-chip-bar-renderer class="chip-bar filter-chip-bar-in" id="filter-chip-bar">
+              <div class="chip-bar-contents" role="tablist">
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_EXPLORE_LAUNCHER_CHIP" aria-selected="false">
+                      <div class="chip-container crispy-chips">
+                          <c3-icon>
+                              <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24">
+                                  <path
+                                      d="M9.8,9.8l-3.83,8.23l8.23-3.83l3.83-8.23L9.8,9.8z M13.08,12.77c-0.21,0.29-0.51,0.48-0.86,0.54 c-0.07,0.01-0.15,0.02-0.22,0.02c-0.28,0-0.54-0.08-0.77-0.25c-0.29-0.21-0.48-0.51-0.54-0.86c-0.06-0.35,0.02-0.71,0.23-0.99 c0.21-0.29,0.51-0.48,0.86-0.54c0.35-0.06,0.7,0.02,0.99,0.23c0.29,0.21,0.48,0.51,0.54,0.86C13.37,12.13,13.29,12.48,13.08,12.77z M12,3c4.96,0,9,4.04,9,9s-4.04,9-9,9s-9-4.04-9-9S7.04,3,12,3 M12,2C6.48,2,2,6.48,2,12s4.48,10,10,10s10-4.48,10-10S17.52,2,12,2 L12,2z"
+                                  ></path>
+                              </svg>
+                          </c3-icon>
+                          <span class="typography-title-1 chip-text">Explorar</span>
+                      </div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-divider-renderer></ytm-chip-divider-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="true" class="selected all-chip-renderer">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Tudo</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Jogos</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">HTML</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Ao vivo</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Grand Theft Auto V</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Software aplicativo</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Pensamentos</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Chuva</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Jogo de ação e aventura</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Enviados recentemente</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_HOME_FILTER" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Assistidos</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+                  <ytm-chip-cloud-chip-renderer role="tab" chip-style="STYLE_REFRESH_TO_NOVEL_CHIP" aria-selected="false">
+                      <div class="chip-container crispy-chips"><span class="typography-title-1 chip-text">Novidades para você</span></div>
+                  </ytm-chip-cloud-chip-renderer>
+              </div>
+          </ytm-feed-filter-chip-bar-renderer>
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
