--- a/CG/index.html
+++ b/CG/index.html
@@ -14,7 +14,7 @@
         padding: 0;
         box-sizing: border-box;
       }
-      .chip-bar-contents{
+    /*  .chip-bar-contents{
         display: flex;
         height: 48px;
         overflow-x:scroll;
@@ -22,17 +22,17 @@
 
       }
       .iKhsZf{
-        height: 100%;
-        margin: 5px;
+        height: 40px
+        margin: 0 5px;
         max-width:200px;
         padding: 2 4;
         border: 2px solid #555;
-      }
+      }*/
     </style>
   </head>
   <body>
     <div id="root">
-      <div class="JhGtE">
+      <!---div class="JhGtE">
         <div class="menu">
           <div class="Uhsyh" id="filter-chip-bar">
               <div class="chip-bar-contents" role="tablist">
@@ -89,7 +89,7 @@
           </div>
 
         </div>
-      </div>
+      </div-->
     </div>
   </body>
 </html>
