--- a/CG/index.html
+++ b/CG/index.html
@@ -32,6 +32,24 @@
   </head>
   <body>
     <div id="root">
+      <div class="barLeft">
+        <div class="content">
+          <div class="ijYss">
+            <div class="content-title">
+              <span ></span>
+            </div>
+            <div class="buttons-barL">
+              <a class="link_4">
+                <div class="hssfTr">
+                  <div class="title_386">
+                    <span >HOMES</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
       <!---div class="JhGtE">
         <div class="menu">
           <div class="Uhsyh" id="filter-chip-bar">
