--- a/CG/index.html
+++ b/CG/index.html
@@ -39,10 +39,16 @@
               <span ></span>
             </div>
             <div class="buttons-barL">
-              <a class="link_4">
-                <div class="hssfTr">
-                  <div class="title_386">
-                    <span >HOMES</span>
+              <a class="ScInteractableBase-sc-awmohi-0 ScInteractableDefault-sc-awmohi-1 bWUQSB ifHLGh tw-interactable" title="Início" href="/u/fan02dlet/home">
+                <div class="Layout-sc-nxg1ff-0 fFtJls sunlight-collasped-nav-layout">
+                  <div class="Layout-sc-nxg1ff-0 jUDoCg">
+                    <figure class="ScFigure-sc-1j5mt50-0 kYSkP tw-svg">
+                      <svg type="color-fill-current" width="20px" height="20px" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="ScSvg-sc-1j5mt50-1 jxWtmu">
+                        <g>
+                          <path fill-rule="evenodd" d="M17 8l-7-6-7 6v10h14V8zm-7-3.366l5 4.286V16h-4v-3H9v3H5V8.92l5-4.286z" clip-rule="evenodd">
+                        </g>
+                      </svg>
+                    </figure>
                   </div>
                 </div>
               </a>
