--- a/CG/index.html
+++ b/CG/index.html
@@ -38,8 +38,14 @@
       .kYSkP{
         fill: #fff;
       }
+      .bWUQSB:hover{
+        background: #5553;
+      }
       .bWUQSB{
-        padding: 5px;
+        padding: 10px;
+        display:block;
+        margin: 1px 0;
+        border-radius: 4px;
       }
     </style>
   </head>
