--- a/CG/index.html
+++ b/CG/index.html
@@ -14,6 +14,9 @@
         padding: 0;
         box-sizing: border-box;
       }
+      a{
+        text-decoration:none;
+      }
     /*  .chip-bar-contents{
         display: flex;
         height: 48px;
@@ -41,11 +44,23 @@
       .bWUQSB:hover{
         background: #5553;
       }
+      .fFtJls{
+        display:flex;
+      }
       .bWUQSB{
         padding: 10px;
-        display:block;
         margin: 1px 0;
+        display:block;
         border-radius: 4px;
+      }
+      .jGatJbs{
+        margin: 0 20px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+      .UMagYr{
+        color: #fff;
+        font-weight: 600;
       }
     </style>
   </head>
@@ -57,6 +72,20 @@
             <div class="content-title">
               <span ></span>
             </div>
+            <button class="ScCoreButton-sc-1qn4ixc-0 ffyxRu ScButtonIcon-sc-o7ndmn-0 nHKTN" aria-expanded="true" aria-label="Reduzir navegação da esquerda" title="Reduzir navegação da esquerda">
+<div class="ButtonIconFigure-sc-1ttmz5m-0 fbCCvx">
+<div class="ScIconLayout-sc-1bgeryd-0 cXxJjc">
+<div class="ScAspectRatio-sc-1sw3lwy-1 kPofwJ tw-aspect">
+<div class="ScAspectSpacer-sc-1sw3lwy-0 dsswUS">
+<svg width="100%" height="100%" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="ScIconSVG-sc-1bgeryd-1 ifdSJl">
+<g>
+<path d="M16 16V4h2v12h-2zM6 9l2.501-2.5-1.5-1.5-5 5 5 5 1.5-1.5-2.5-2.5h8V9H6z">
+</g>
+</svg>
+</div>
+</div>
+</div>
+</button>
             <div class="buttons-barL">
               <a class="ScInteractableBase-sc-awmohi-0 ScInteractableDefault-sc-awmohi-1 bWUQSB ifHLGh tw-interactable" title="Início" href="/u/fan02dlet/home">
                 <div class="Layout-sc-nxg1ff-0 fFtJls sunlight-collasped-nav-layout">
@@ -68,6 +97,11 @@
                         </g>
                       </svg>
                     </figure>
+                  </div>
+                  <div class="jGatJbs">
+                    <div class="UMagYr">
+                      <span >Home</span>
+                    </div>
                   </div>
                 </div>
               </a>
@@ -81,6 +115,11 @@
                         </g>
                       </svg>
                     </figure>
+                  </div>
+                  <div class="jGatJbs">
+                    <div class="UMagYr">
+                      <span >Home</span>
+                    </div>
                   </div>
                 </div>
               </a>
