--- a/CG/index.html
+++ b/CG/index.html
@@ -62,6 +62,19 @@
         color: #fff;
         font-weight: 600;
       }
+      .ffyxRu{
+        height: 48px;
+        position: absolute;
+        right: -48px;
+        top: 0;
+        border-top-right-radius:4px;
+        border-bottom-right-radius:4px;
+        background:rgb(15,15,15);
+        border:none;
+      }
+      .dsswUS{
+        fill: #fff;
+      }
     </style>
   </head>
   <body>
@@ -73,19 +86,19 @@
               <span ></span>
             </div>
             <button class="ScCoreButton-sc-1qn4ixc-0 ffyxRu ScButtonIcon-sc-o7ndmn-0 nHKTN" aria-expanded="true" aria-label="Reduzir navegação da esquerda" title="Reduzir navegação da esquerda">
-<div class="ButtonIconFigure-sc-1ttmz5m-0 fbCCvx">
-<div class="ScIconLayout-sc-1bgeryd-0 cXxJjc">
-<div class="ScAspectRatio-sc-1sw3lwy-1 kPofwJ tw-aspect">
-<div class="ScAspectSpacer-sc-1sw3lwy-0 dsswUS">
-<svg width="100%" height="100%" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="ScIconSVG-sc-1bgeryd-1 ifdSJl">
-<g>
-<path d="M16 16V4h2v12h-2zM6 9l2.501-2.5-1.5-1.5-5 5 5 5 1.5-1.5-2.5-2.5h8V9H6z">
-</g>
-</svg>
-</div>
-</div>
-</div>
-</button>
+              <div class="ButtonIconFigure-sc-1ttmz5m-0 fbCCvx">
+                <div class="ScIconLayout-sc-1bgeryd-0 cXxJjc">
+                  <div class="ScAspectRatio-sc-1sw3lwy-1 kPofwJ tw-aspect"/>
+                  <div class="ScAspectSpacer-sc-1sw3lwy-0 dsswUS">
+                    <svg width="100%" height="100%" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="ScIconSVG-sc-1bgeryd-1 ifdSJl">
+                    <g>
+                    <path d="M16 16V4h2v12h-2zM6 9l2.501-2.5-1.5-1.5-5 5 5 5 1.5-1.5-2.5-2.5h8V9H6z">
+                    </g>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </button>
             <div class="buttons-barL">
               <a class="ScInteractableBase-sc-awmohi-0 ScInteractableDefault-sc-awmohi-1 bWUQSB ifHLGh tw-interactable" title="Início" href="/u/fan02dlet/home">
                 <div class="Layout-sc-nxg1ff-0 fFtJls sunlight-collasped-nav-layout">
