--- a/CG/index.html
+++ b/CG/index.html
@@ -84,8 +84,16 @@
         width:20px;
         height: 20px;
       }
+      
+      .ssTsg{
+        transition: 0.1s;
+      }
       .open{
         left: 0;
+      }
+      .open .ssTsg{
+        transform: rotate(180deg);
+        
       }
     </style>
   </head>
@@ -101,7 +109,7 @@
               <div class="ButtonIconFigure-sc-1ttmz5m-0 fbCCvx">
                 <div class="ScIconLayout-sc-1bgeryd-0 cXxJjc">
                   <div class="ScAspectRatio-sc-1sw3lwy-1 kPofwJ tw-aspect"/>
-                  <div class="ScAspectSpacer-sc-1sw3lwy-0 dsswUS">
+                  <div class="ssTsg dsswUS">
                     <svg width="100%" height="100%" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="ScIconSVG-sc-1bgeryd-1 ifdSJl">
                     <g>
                     <path d="M16 16V4h2v12h-2zM6 9l2.501-2.5-1.5-1.5-5 5 5 5 1.5-1.5-2.5-2.5h8V9H6z">
