--- a/CG/index.html
+++ b/CG/index.html
@@ -34,17 +34,17 @@
       .barLeft{
         position: fixed;
         height: 100%;
-        width:50%;
-        left: -50%;
+        width:100%;
+        left: -250;
         max-width:250px;
         background: rgb(15,15,15);
-        transition: 0.2s;
+        transition: 0.2s;z-index: 150;
       }
       .kYSkP{
         fill: #fff;
       }
       .bWUQSB:hover{
-        background: #5553;
+        background: #5555;
       }
       .fFtJls{
         display:flex;
@@ -72,7 +72,8 @@
         border-top-right-radius:4px;
         border-bottom-right-radius:4px;
         background:rgb(15,15,15);
-        border:none;
+        border:none;z-index: 120;
+        
       }
       .dsswUS{
         fill: #fff;
@@ -142,10 +143,14 @@
                 <div class="Layout-sc-nxg1ff-0 fFtJls sunlight-collasped-nav-layout">
                   <div class="Layout-sc-nxg1ff-0 jUDoCg">
                     <figure class="ScFigure-sc-1j5mt50-0 kYSkP tw-svg">
-                      <svg type="color-fill-current" width="20px" height="20px" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="ScSvg-sc-1j5mt50-1 jxWtmu">
-                        <g>
-                          <path fill-rule="evenodd" d="M17 8l-7-6-7 6v10h14V8zm-7-3.366l5 4.286V16h-4v-3H9v3H5V8.92l5-4.286z" clip-rule="evenodd">
-                        </g>
+                      <svg fill="#fff"type="color-fill-current" width="20px" height="20px" version="1.1" viewBox="0 0 256 256" x="0px" y="0px" class="ScSvg-sc-1j5mt50-1 jxWtmu">
+
+<defs>
+</defs>
+<g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)" >
+	<path d="M 81.73 50.284 c 4.068 -2.349 4.068 -8.22 0 -10.569 L 48.051 20.271 L 14.372 0.827 c -4.068 -2.349 -9.153 0.587 -9.153 5.284 V 45 v 38.889 c 0 4.697 5.085 7.633 9.153 5.284 l 33.679 -19.444 L 81.73 50.284 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+</g>
+</svg>
                       </svg>
                     </figure>
                   </div>
@@ -223,9 +228,7 @@
     <script >
       var ab=document.querySelector(".barLeft");
       var ad=document.querySelector(".uKJyVz");
-      ad.onclick=function(){
-        console.log(ab.classList.toggle("open"))
-      }
+      ad.onclick=function(){ab.classList.toggle("open");}
     </script>
   </body>
 </html>
