--- a/CG/index.html
+++ b/CG/index.html
@@ -96,6 +96,17 @@
         transform: rotate(180deg);
         
       }
+      .ijYss{
+        padding: 5px;
+      }
+      .content-title{
+        font-size: 20px;
+        color: #fff;
+        display:flex;
+        justify-content: center;
+        font-weight: 600;
+        font-style: italic;
+      }
     </style>
   </head>
   <body>
@@ -104,7 +115,7 @@
         <div class="content">
           <div class="ijYss">
             <div class="content-title">
-              <span ></span>
+              <span >MENU</span>
             </div>
             <button class="uKJyVz ffyxRu ScButtonIcon-sc-o7ndmn-0 nHKTN" aria-expanded="true" aria-label="Reduzir navegação da esquerda" title="Reduzir navegação da esquerda">
               <div class="ButtonIconFigure-sc-1ttmz5m-0 fbCCvx">
@@ -121,7 +132,7 @@
               </div>
             </button>
             <div class="buttons-barL">
-              <a class="ScInteractableBase-sc-awmohi-0 ScInteractableDefault-sc-awmohi-1 bWUQSB ifHLGh tw-interactable" title="Início" href="/u/fan02dlet/home">
+              <a class="ScInteractableBase-sc-awmohi-0 ScInteractableDefault-sc-awmohi-1 bWUQSB ifHLGh tw-interactable" title="Home" href="/">
                 <div class="Layout-sc-nxg1ff-0 fFtJls sunlight-collasped-nav-layout">
                   <div class="Layout-sc-nxg1ff-0 jUDoCg">
                     <figure class="ScFigure-sc-1j5mt50-0 kYSkP tw-svg">
@@ -139,18 +150,54 @@
                   </div>
                 </div>
               </a>
+              <a class="ScInteractableBase-sc-awmohi-0 ScInteractableDefault-sc-awmohi-1 bWUQSB ifHLGh tw-interactable" title="Gaming" href="/gaming">
+                <div class="Layout-sc-nxg1ff-0 fFtJls sunlight-collasped-nav-layout">
+                  <div class="Layout-sc-nxg1ff-0 jUDoCg">
+                    <figure class="ScFigure-sc-1j5mt50-0 kYSkP tw-svg">
+                      <svg type="color-fill-current" width="20px" height="20px" version="1.1" viewBox="0 0 24 24" x="0px" y="0px" class="ScSvg-sc-1j5mt50-1 jxWtmu">
+                        <g>
+                          <path d="M10,12H8v2H6v-2H4v-2h2V8h2v2h2V12z M17,12.5c0-0.83-0.67-1.5-1.5-1.5S14,11.67,14,12.5c0,0.83,0.67,1.5,1.5,1.5 S17,13.33,17,12.5z M20,9.5C20,8.67,19.33,8,18.5,8S17,8.67,17,9.5c0,0.83,0.67,1.5,1.5,1.5S20,10.33,20,9.5z M16.97,5.15l-4.5,2.53 l-0.49,0.27l-0.49-0.27l-4.5-2.53L3,7.39v6.43l8.98,5.04l8.98-5.04V7.39L16.97,5.15 M16.97,4l4.99,2.8v7.6L11.98,20L2,14.4V6.8 L6.99,4l4.99,2.8L16.97,4L16.97,4z" class="style-scope yt-icon">
+                        </g>
+                      </svg>
+                    </figure>
+                  </div>
+                  <div class="jGatJbs">
+                    <div class="UMagYr">
+                      <span >Jogos</span>
+                    </div>
+                  </div>
+                </div>
+              </a>
               <a class="ScInteractableBase-sc-awmohi-0 ScInteractableDefault-sc-awmohi-1 bWUQSB ifHLGh tw-interactable" title="Início" href="/u/fan02dlet/home">
                 <div class="Layout-sc-nxg1ff-0 fFtJls sunlight-collasped-nav-layout">
                   <div class="Layout-sc-nxg1ff-0 jUDoCg">
                     <figure class="ScFigure-sc-1j5mt50-0 kYSkP tw-svg">
-                      <svg fill="#fff"type="color-fill-current" width="20px" height="20px" version="1.1" viewBox="0 0 256 256" x="0px" y="0px" class="ScSvg-sc-1j5mt50-1 jxWtmu">
+                      <svg fill="#fff"type="color-fill-current" width="14px" height="14px" version="1.1" viewBox="0 0 256 256" x="0px" y="0px" style="margin:4px"class="jxWtmu">
 
 <defs>
 </defs>
-<g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)" >
-	<path d="M 81.73 50.284 c 4.068 -2.349 4.068 -8.22 0 -10.569 L 48.051 20.271 L 14.372 0.827 c -4.068 -2.349 -9.153 0.587 -9.153 5.284 V 45 v 38.889 c 0 4.697 5.085 7.633 9.153 5.284 l 33.679 -19.444 L 81.73 50.284 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+<g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill:  ; fill-rule: nonzero; opacity: 1;" transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)" >
+	<path d="M 81.73 50.284 c 4.068 -2.349 4.068 -8.22 0 -10.569 L 48.051 20.271 L 14.372 0.827 c -4.068 -2.349 -9.153 0.587 -9.153 5.284 V 45 v 38.889 c 0 4.697 5.085 7.633 9.153 5.284 l 33.679 -19.444 L 81.73 50.284 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10;  fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
 </g>
 </svg>
+                      </svg>
+                    </figure>
+                  </div>
+                  <div class="jGatJbs">
+                    <div class="UMagYr">
+                      <span >Videos</span>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <a class="ScInteractableBase-sc-awmohi-0 ScInteractableDefault-sc-awmohi-1 bWUQSB ifHLGh tw-interactable" title="Início" href="/u/fan02dlet/home">
+                <div class="Layout-sc-nxg1ff-0 fFtJls sunlight-collasped-nav-layout">
+                  <div class="Layout-sc-nxg1ff-0 jUDoCg">
+                    <figure class="ScFigure-sc-1j5mt50-0 kYSkP tw-svg">
+                      <svg type="color-fill-current" width="20px" height="20px" version="1.1" viewBox="0 0 24 24" x="0px" y="0px" class="ScSvg-sc-1j5mt50-1 jxWtmu">
+                        <g>
+                          <path d="M14,12c0,1.1-0.9,2-2,2s-2-0.9-2-2s0.9-2,2-2S14,10.9,14,12z M8.48,8.45L7.77,7.75C6.68,8.83,6,10.34,6,12 s0.68,3.17,1.77,4.25l0.71-0.71C7.57,14.64,7,13.39,7,12S7.57,9.36,8.48,8.45z M16.23,7.75l-0.71,0.71C16.43,9.36,17,10.61,17,12 s-0.57,2.64-1.48,3.55l0.71,0.71C17.32,15.17,18,13.66,18,12S17.32,8.83,16.23,7.75z M5.65,5.63L4.95,4.92C3.13,6.73,2,9.24,2,12 s1.13,5.27,2.95,7.08l0.71-0.71C4.02,16.74,3,14.49,3,12S4.02,7.26,5.65,5.63z M19.05,4.92l-0.71,0.71C19.98,7.26,21,9.51,21,12 s-1.02,4.74-2.65,6.37l0.71,0.71C20.87,17.27,22,14.76,22,12S20.87,6.73,19.05,4.92z" class="style-scope yt-icon">
+                        </g>
                       </svg>
                     </figure>
                   </div>
