--- a/CG/index.html
+++ b/CG/index.html
@@ -275,15 +275,13 @@
       var ab=document.querySelector(".barLeft");
       var ad=document.querySelector(".uKJyVz");
       ad.onclick=function(){ab.classList.toggle("open");}
-      
       var az=document.querySelectorAll("a");
       az.forEach(function(e){e.onclick=function(){window.history.pushState(null,document.title, e.href);apt();return false};});
       
       function apt(){
         var path=window.location.pathname;
-        console.log(path)
         window.history.url = window.history.url ? window.history.url : [];
-        window.history.url.push({location:path,date: new Date.now()})
+        window.history.url.push(path)
       }
     </script>
   </body>
