--- a/CG/index.html
+++ b/CG/index.html
@@ -386,13 +386,28 @@
             <div class="Layout-sc-nxg1ff-0 iYyXbJ">
               <figure class="ScFigure-sc-1j5mt50-0 gTWtvE tw-svg">
                 <svg type="color-fill-current" width="20px" height="20px" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="ScSvg-sc-1j5mt50-1 gKdogK">
-                  <g>…</g>
+                  <g>
+                    <path d="M5.757 14.243A6 6 0 105.527 6H7v2H2V3h2v1.708a8 8 0 11.343 10.949l1.414-1.414z"></path>
+                    <path d="M11 10.414l1.707-1.707-1.414-1.414L9 9.586V14h2v-3.586z"></path>
+                  </g>
                 </svg>
               </figure>
             </div>
             <span>ARIA SECRET</span>
           </div>
+          
         </a>
+        <div class="Layout-sc-nxg1ff-0">
+          <button class="ScCoreButton-sc-1qn4ixc-0 JLzbY ScButtonIcon-sc-o7ndmn-0 cnVPth" aria-label="Remover histórico de busca">
+            <div class="gdKhd">
+              <svg width="100%" height="100%" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="ScIconSVG-sc-1bgeryd-1 jgyXQm">
+                <g>
+                  <path d="M8.5 10L4 5.5 5.5 4 10 8.5 14.5 4 16 5.5 11.5 10l4.5 4.5-1.5 1.5-4.5-4.5L5.5 16 4 14.5 8.5 10z"></path>
+                </g>
+              </svg>    
+            </div>
+          </button>
+        </div>
       </div>
     </li>
   </ul>
