--- a/CG/index.html
+++ b/CG/index.html
@@ -397,12 +397,15 @@
     .a-df5{
       color: inherit;
       text-decoration:none;
+      display: block;
       overflow: hidden;
+      width:100%;
     }
     .content-auto-complete-text{
       display:flex;
       align-items: center;
       height: 50;
+      user-select:none;
     }
     .YyXbJ{
       width: 40px;
@@ -426,7 +429,7 @@
     }
     .gdKhd{
       width: 20px;
-      
+      user-select:none;
     }
   </style>
   <ul>
@@ -446,7 +449,6 @@
             </div>
             <span>ARIA SECRET</span>
           </div>
-        </a>
         <div class="....">
           <button class="button-remove-items" aria-label="Remover histórico de busca">
             <div class="gdKhd">
@@ -457,8 +459,53 @@
               </svg>    
             </div>
           </button>
+        </a>
         </div>
       </div>
     </li>
   </ul>
+  <script >
+  searchListAu();
+    var EM={}
+    EM.tpl=function(e){
+      return`<li class="Ugsj">
+      <div class="content-auto-complete">
+        <a href="/" class="a-df5">
+          <div class="content-auto-complete-text">
+            <div class="YyXbJ">
+              <figure class="TBafs">
+                <svg type="color-fill-current" width="20px" height="20px" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="ScSvg-sc-1j5mt50-1 gKdogK">
+                  <g>
+                    <path d="M5.757 14.243A6 6 0 105.527 6H7v2H2V3h2v1.708a8 8 0 11.343 10.949l1.414-1.414z"></path>
+                    <path d="M11 10.414l1.707-1.707-1.414-1.414L9 9.586V14h2v-3.586z"></path>
+                  </g>
+                </svg>
+              </figure>
+            </div>
+            <span>ARIA SECRET</span>
+          </div>
+        <div class="....">
+          <button class="button-remove-items" aria-label="Remover histórico de busca">
+            <div class="gdKhd">
+              <svg width="100%" height="100%" version="1.1" viewBox="0 0 20 20" x="0px" y="0px" class="ScIconSVG-sc-1bgeryd-1 jgyXQm">
+                <g>
+                  <path d="M8.5 10L4 5.5 5.5 4 10 8.5 14.5 4 16 5.5 11.5 10l4.5 4.5-1.5 1.5-4.5-4.5L5.5 16 4 14.5 8.5 10z"></path>
+                </g>
+              </svg>    
+            </div>
+          </button>
+        </a>
+        </div>
+      </div>
+    </li>`
+    }
+    function searchListAu(){
+      var g=document.querySelector("ui"),
+      sh=localStorage.getItem("search-history");
+      if(sh){
+      JSON.parse(sh).forEach(function(e){
+        ui.innerHTML+=EM.tpl(e)
+      }) }
+    }
+  </script>
 </div>
