--- a/404.html
+++ b/404.html
@@ -1,20 +1,48 @@
 <html lang="pt">
  <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="description" content="Uma seleção variada de videogames que podem ser jogados no computador.">
-<!--https://youtube.com/playlist?list=https://youtube.com/playlist?list=-->
-<!---iframe allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"src="https://www.youtube.com/embed/Yno0DudsUwA?enablejsapi=1&origin=http%3A%2F%2Flocalhost%3A5502&widgetid=1&autoplay=7" allow="autoplay"></iframe-->
-<base href="https://eriklicom.github.io/SiteL/">
-<title>STERK GAMES</title>
-<script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-<script src="main.js"></script>
-<meta name="preconect" href="https://youtube.com">
-<link rel="stylesheet" href="assets/core-7a26f86447572.css"/>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Uma seleção variada de videogames que podem ser jogados no computador.">
+  <!--https://youtube.com/playlist?list=https://youtube.com/playlist?list=-->
+  <!---iframe allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"src="https://www.youtube.com/embed/Yno0DudsUwA?enablejsapi=1&origin=http%3A%2F%2Flocalhost%3A5502&widgetid=1&autoplay=7" allow="autoplay"></iframe-->
+  <base href="https://eriklicom.github.io/SiteL/">
+  <title>STERK GAMES</title>
+  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+  <script src="main.js"></script>
+  <script>
+    
+  </script>
+  <meta name="preconect" href="https://youtube.com">
+  <link rel="stylesheet" href="assets/core-7a26f86447572.css"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+  <style >
+    .hw100{
+      width: 100%;
+      height: 100%;
+      background-color:var(--bacg);
+      max-width:400px;
+    }
+    .ba-te{
+      background-image: ;
+    }
+  </style>
  </head>
- <body size="smooth" class="--dark"></body>
+ <body size="smooth" class="--dark">
+   <app modal="login/regiter">
+     <div class="ba-te">
+       <video preload="none" style="object-fit:cover;object-position:center top" data-testid="hero:video" playsinline="" loop="" muted="" class="style__Video-fydk49-2 gCXmmQ">
+         <source src="https://www.leagueoflegends.com/static/hero-blurred-7572101a2ce5e003b66483b7fe5c5d36.webm" type="video/webm"/>
+         <source src="https://www.leagueoflegends.com/static/hero-blurred-89a1d97affb8756b6763d75dcab20bb6.mp4" type="video/mp4"/>
+       </video>
+       <div style="--bacg:#555"class="hw100">
+        
+       </div>
+     </div>
+   </app>
+   <script >
+     window.opacity=.2
+   </script>
+ </body>
 </html>
