--- a/404.html
+++ b/404.html
@@ -23,21 +23,64 @@
       height: 100%;
       background-color:var(--bacg);
       max-width:400px;
+      backdrop-filter: blur(32px);
     }
     .ba-te{
       background-image: ;
+    }
+    .media{
+      top: 0;
+      z-index: -1;
+      bottom: 0;
+      width: 100%;
+      min-height: 100%;
+      left:0;
+    }
+    .ish.on span{
+      display:none;
+    }
+    .ydu{
+      border: 4px solid #000;
+      border-left: 4px solid #fff;
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      animation: ;
+    }
+    .uKKv{
+      background: inherit;
+      width:100%;
     }
   </style>
  </head>
  <body size="smooth" class="--dark">
    <app modal="login/regiter">
      <div class="ba-te">
-       <video preload="none" style="object-fit:cover;object-position:center top" data-testid="hero:video" playsinline="" loop="" muted="" class="style__Video-fydk49-2 gCXmmQ">
-         <source src="https://www.leagueoflegends.com/static/hero-blurred-7572101a2ce5e003b66483b7fe5c5d36.webm" type="video/webm"/>
+       <video muted="" class="media"autoplay=""preload="none" style="position: fixed" data-testid="hero:video" playsinline="" loop="" muted="" class="style__Video-fydk49-2 gCXmmQ">
+         <source src="https://www.leagueoflegends.com/static/hero-0632cbf2872c5cc0dffa93d2ae8a29e8.webm" type="video/webm"/>
          <source src="https://www.leagueoflegends.com/static/hero-blurred-89a1d97affb8756b6763d75dcab20bb6.mp4" type="video/mp4"/>
        </video>
-       <div style="--bacg:#555"class="hw100">
-        
+       <div style="--bacg:#000d"class="hw100">
+        <div class="login">
+          <h1 >///</h1>
+          <div class="uJdAs">
+            <form method="POST" novalidate="" >
+              <div class="yTxNN">
+                <input maxlength="100" autocomplete="off" >
+              </div>
+              <div class="fJ6hY7">
+                <button class="uKKv">
+                  <div class="ish on">
+                    <span>ENTRAR</span>
+                    <div class="ydu">
+                      
+                    </div>
+                  </div>
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
        </div>
      </div>
    </app>
